--- a/seo.html
+++ b/seo.html
@@ -6,122 +6,14 @@
 	<meta name="viewport" content="width=device-width">
 	<title>SEO</title>
 	<link rel="stylesheet" media="all" href="css/style.css">
+	<link href="code-prettify/prettify.css" type="text/css" rel="stylesheet">
+	<script type="text/javascript" src="code-prettify/prettify.js"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
 	<script src="js/script.js"></script>
 </head>
 
-<!--
-	gitの使い方：
-  https://gitforwindows.org から install
-  (Windowsの人は)git CMDを開く
-	git config --global user.name "ユーザーネーム"
-	git config --global user.email メールアドレス
-	//上の二つはしてない人だけで良いです。
-	git clone https://github.com/Siro3150/How_To.git
-	git branch ブランチ名
-	git checkout ブランチ名
-	編集作業
-	git add .
-	git commit -m 'コメントを書く'
-	git push -u origin ブランチ名
 
-
-	２回め以降の編集作業
-	git pull https://github.com/Siro3150/How_To.git
-		編集作業
-	git add .
-	git commit -m 'コメントを書く'
-	git push -u origin ブランチ名
-
-	テンプレートの説明：
-	(新しくページを作る時)
-	①ファイル名は小文字英語でメインコンテンツ名.htmlとすること。(seo.html) ファイル位置はとりあえずseo.htmlと同じ階層で。
-	②<meta content="">にファイル名と同じようにメインコンテンツ名を記述する。(例：seo)
-	③良い感じのを<title></title>に書く(例：SEO)
-
-	(コンテンツを追加する時)
-	④サイドバーのリストにコンテンツの名前とhrefにsection番号を新たに加える。(例：sec09)
-	⑤<div id="content"></div>内に以下のプログラムを加えてコンテンを記述。<section id="">に先ほどのリストに書いたsection番号を書く。
-
-			<section id="secXX">
-				<header>
-					<h2><span>コンテンツ名</span></h2>
-				</header>
-				<div class="innerS">
-					<p>導入や思想、そのコンテンツがどのように役に立つかなど(できれば書いて欲しい)</p>
-					<h3>サブタイトル(なくても良い)</h3>
-					<p>説明</p>
-				</div>
-			</section>
-
-	⑥画像を用いて文章を説明したい時、⑤と同様に以下のプログラムを加える。(注：画像リンクはなるべくimagaesフォルダーにまとめること)
-
-
-			<section id="secXX">
-				<header>
-					<h2><span>コンテンツ名</span></h2>
-				</header>
-					<div class="inner">
-						<div class="article">
-							<img src="画像urlを記入" width="370" height="224" alt="">
-							<p>画像の右に表示される</p>
-							<p>画像右下あたりに表示される</p>
-						</div>
-						<div class="article">
-							<img src="画像urlを記入" width="370" height="224" alt="">
-							<p>＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃</p>
-						</div>
-					</div>
-			</section>
-
-
-	⑦画像を横並びに置いてその下に文章を書く場合、⑤と同様に以下のプログラムをコピペする。
-
-
-			<section id="secXX">
-				<header>
-					<h2><span>コンテンツ名</span></h2>
-				</header>
-				<div class="inner">
-					<ul class="col4">
-						<li>
-							<p class="img"><img src="url" width="168" height="168" alt=""></p>
-							<p>画像の真下に表示される文章です</p>
-						</li>
-						<li>
-							<p class="img"><img src="url" width="168" height="168" alt=""></p>
-							<p>たくさんは書けません</p>
-						</li>
-						<li>
-							<p class="img"><img src="url" width="168" height="168" alt=""></p>
-							<p>リストは必要に応じて加えたり減らしたりしてください。</p>
-						</li>
-						<li>
-							<p class="img"><img src="url" width="168" height="168" alt=""></p>
-							<p>＃＃＃＃＃＃＃＃＃＃＃＃</p>
-						</li>
-					</ul>
-				</div>
-			</section>
-
-
-	⑧ソースコードを埋め込みたい時
-
-		<pre class="prettyprint linenums">
-			<code>
-				ソースコード
-			</code>
-		</pre>
-
-もっと詳しい説明：
-・全体を大きくheader、content、footerに分かれておりcontentはさらにsectionごとに区切られている。
-・サイドナビゲーションのリンク先をsectionのidに指定することでページ内遷移をしている。
-・<div class="inner">と<div class="innerS">の違いは、innerの方が画像を含めた記事を載せるため横幅が広い。innerSの方は文章のみの説明となるので横幅が狭め
-・cssとjavascriptファイルはあまり気にしなくて良い。
-・後は自由に使いたいとこをコピペしたり、無駄なとこを消したりして使ってください。
- -->
-
-<body id="top">
+<body id="top" onload="prettyPrint()">
 	<div id="wrapper">
 
 		<div id="sidebar">
@@ -169,10 +61,39 @@
 					<h2><span>リンク</span></h2>
 				</header>
 				<div class="innerS">
-					<h3>サブタイトルとか(なくても良い)</h3>
+					<h3>リンクテキストの効果</h3>
 					<p>
-						＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃テキストはこの辺を利用してください＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃
+						リンクテキストとは、リンク内に表示されるテキストです。このテキストはユーザーや Google に対して、リンク先のページについての情報を伝えます。
+						ページ上のリンクには内部的なリンク（サイト上の他のページを参照しているもの）もあれば、外部的なリンク（他のサイトのコンテンツにつながるもの）もあります。
+						どちらの場合も、アンカーテキストが効果的であればあるほど、ユーザーはナビゲートしやすくなり、Google はリンク先のページを理解しやすくなります。
 					</p>
+					<img src="https://lh3.googleusercontent.com/kJ9Hr6MZ3i8pG7U0v40uFT4NV1Ys7TEcG4fkLOhq6E1sUJY9UoUyWHoMj0uRGaiwxzl1=w557" alt="アンカーテキストの例">
+					<p>適切なアンカーテキストがあれば、ユーザーと検索エンジンはリンクされたページの内容を簡単に把握できます。</p>
+					<h3>効果的なリンクテキストの記述方法</h3>
+					<ol>
+						<li>リンク先のページの内容に関する基本的な情報がわかるアンカーテキストを作成する。</li>
+						<li>リンクは短くてわかりやすいテキストにする。</li>
+						<li>ユーザーが通常のテキストとリンクのアンカーテキストを簡単に区別できるようにする。（ユーザーがリンクを見逃したり、誤ってリンクをクリックしたりすると、コンテンツの有用性が低くなる）</li>
+					</ol>
+					<h3>注意点</h3>
+					<p style="color: red;">リンク先に注意！</p>
+					<p>他のサイトにリンクすると、自分のサイトに対する評判の一部を別のサイトに与えることになります。ときどき、このことを利用しようとして、別のサイトのコメント欄や掲示板に自分のサイトへのリンクを追加するユーザーがいます。そのため、あるサイトに否定的に言及するとともに、自分のサイトへの評判をそのサイトには与えたくないと考える場合もあるでしょう。たとえば、コメントスパムに関するブログ投稿を執筆し、自分のブログに対して最近コメントスパムを行ったサイトを挙げる場合を想像してください。他の人に警告するため、コンテンツにそのサイトへのリンクを掲載したいけれど、リンクすることで、自分のサイトへの評判をそのサイトに分け与えたくはありません。このような場合は nofollow を使用するのが適切です。</p>
+
+					<h4>＊ページ上のすべてのリンクに nofollow を適用する場合＊</h4>
+
+					<pre class="prettyprint linenums">
+&lt;!DOCTYPE html&gt;
+&lt;html&gt;
+	&lt;head&gt;
+		&lt;meta name=&quot;robots&quot; content=&quot;nofollow&quot;&gt;
+
+	&lt;/head&gt;
+	&lt;body&gt;
+
+	&lt;/body&gt;
+&lt;/html&gt;
+					</pre>
+					<p>このように、ページの&lt;head&gt;タグ内に&lt;meta name=&quot;robots&quot; content=&quot;nofollow&quot;&gt;を追加</p>
 				</div>
 			</section>
 
