--- a/responsive.html
+++ b/responsive.html
@@ -138,7 +138,7 @@
               <li><a href="#top">top</a></li>
               <li><a href="#sec01">レスポンシブデザインのメリット・デメリット</a></li>
               <li><a href="#sec02">実装方法</a></li>
-              <li><a href="#sec03"></a></li>
+              <li><a href="#sec03">まとめ</a></li>
               <li><a href="#sec04"></a></li>
               <li><a href="#sec05"></a></li>
               <li><a href="#sec06"></a></li>
@@ -252,14 +252,24 @@
 @media screen and (min-width : 1024px){
   */ 最小幅 1024px 以上の指定 */
 }</pre>
-            <p>
-                このようにして場合分けを行い、CSSを記述することができます。あとはそれぞれに適切なデザインを組み合わせればよいです。
-            </p>
         </div>
       </section>
-      <p>
-          とりあえず現状はこんな感じ、また付け加えたい、、、
-      </p>
+
+      <section id="sec03">
+        <header>
+          <h2><span>まとめ</span></h2>
+        </header>
+        <div class="innerS">
+          <h3></h3>
+          <p>
+            このようにして場合分けを行い、CSSを記述することができます。あとはそれぞれに適切なデザインを組み合わせればよいです。
+            ここで注意すべきはモバイル用に作られたメディアクエリなどですが、それはもう与えられたものとして我々が使うことができる
+            ということです。つまり、この機能を見た皆さんは、スクリーンのサイズによってCSSを場合分けできるという技術を
+            何かほかのことに使える可能性もあります。想像的に新たなコンテンツを作成してください。
+          </p>
+        </div>
+      </section>
+
 
 
 
