--- a/layout2.html
+++ b/layout2.html
@@ -100,24 +100,23 @@
 
 
           <pre class="prettyprint linenums">
-            header{
-              displey:flex;
-              width:100%;
-              height:100px;
-              background-color: darkgrey;
-              align-items: center;
-            }
+header{
+  displey:flex;
+  width:100%;
+  height:100px;
+  background-color: darkgrey;
+  align-items: center;
+}
 
-            .title{
-              margin-right: auto;
-            }
+.title{
+  margin-right: auto;
+}
 
-            .menu-item{
-              list-style: none;
-              display: inline-block;
-              padding: 10px;
-            }
-          </pre>
+.menu-item{
+  list-style: none;
+  display: inline-block;
+  padding: 10px;
+}</pre>
 
           <h4>css</h4>
           <ul>
@@ -128,7 +127,7 @@
             <li>「display:inline-box」で、メニュー項目を横並びで表示させます。</li>
           </ul>
           <h2>ヘッダー完成例</h2>
-          <p class="img"><img src="images/ヘッダー完成例.jpg"  alt="ヘッダー完成例"></p>
+          <p class="img"><img src="images/ヘッダー完成例.jpeg"  alt="ヘッダー完成例"></p>
         </div>
 
       </section>
@@ -138,7 +137,7 @@
           <h2><span>ナビゲーション</span></h2>
         </header>
          <div class="innerS">
-          <p><img src="images/ナビゲーション.jpg" alt="ナビゲーション例"></p>
+          <p><img src="images/ナビゲーション.jpeg" alt="ナビゲーション例"></p>
           <p>人によって「メニュー」と呼ぶこともあります。開発用語では「ナビゲーション」が一般的になります。大きな目次を「グローバルナビゲーション」、小さな目次を「サブナビゲーション」と呼びます。ユーザーを目的のコンテンツに誘導することや、検索エンジンににアピールすることができます。</p>
 
               <h2>ナビゲーションの作り方</h2>
@@ -198,7 +197,7 @@ nav ul li a {
             </ul>
 
             <h2>ナビゲーション完成例</h2>
-            <p class="img"><img src="images/ナビゲーション完成例.jpg"  alt="ナビゲーション完成例"></p>
+            <p class="img"><img src="images/ナビゲーション完成例.jpeg"  alt="ナビゲーション完成例"></p>
 
         </div>
       </section>
@@ -209,7 +208,7 @@ nav ul li a {
         </header>
         <div class="inner">
           <div class="article">
-            <img src="images/コンテンツ.jpg" width="370" height="224" alt="コンテンツ例">
+            <img src="images/コンテンツ.jpeg" width="370" height="224" alt="コンテンツ例">
             <p>ページ内のメインとなる要素の部分です。基本的にホームページの訪問者はこの内容を目当てに来るので、コンテンツが見えやすいようにヘッダーやナビゲーションを一時的に隠すこともあります。</p>
           </div>
         </div>
@@ -222,7 +221,7 @@ nav ul li a {
         </header>
         <div class="inner">
           <div class="article">
-            <img src="images/サイドバー.jpg" width="370" height="224" alt="サイドバー例">
+            <img src="images/サイドバー.jpeg" width="370" height="224" alt="サイドバー例">
             <p>コンテンツの隣に、カテゴリ一覧や関連の記事一覧、広告バナーなどを設置したりする際にとるエリアをサイドバーと呼んでいます。サイドバーを設置するとユーザーはサイドバーから知りたい情報に簡単に辿り着くことができます。また問い合わせのフォームなどと合わせることによって、ユーザーによる商品購入や資料請求などの行動に繋げることができます。</p>
           </div>
         </div>
@@ -287,7 +286,7 @@ article {
             <li>親要素に「display:flex;」を指定し、固定して追従させたい箇所に、CSSで「position: sticky」とコーディングすれば、サイドバーを固定することができます。</li>
           </ul>
           <h2>サイドバー完成例</h2>
-          <p class="img"><img src="images/サイドバー完成例.jpg"  alt="サイドバー完成例"></p>
+          <p class="img"><img src="images/サイドバー完成例.jpeg"  alt="サイドバー完成例"></p>
         </div>
       </section>
 
@@ -366,7 +365,7 @@ article {
           <br>
 
           <h2>フッター完成例</h2>
-          <p class="img"><img src="images/フッター完成例.jpg"  alt="フッター完成例"></p>
+          <p class="img"><img src="images/フッター完成例.jpeg"  alt="フッター完成例"></p>
         </div>
 
       </section>
