--- a/design.html
+++ b/design.html
@@ -182,6 +182,13 @@ p{
       </section>
 
     </div>
+
+    <div class="end">
+      <ul>
+        <li><a href="layout.html">レイアウト</a></li>
+      </ul>
+    </div>
+    
   </div>
 
 </body>
