--- a/index.html
+++ b/index.html
@@ -41,7 +41,6 @@
 
 
     <div id="content">
-
       <section>
         <header>
           <h2><span>サイトの目的</span></h2>
@@ -91,35 +90,17 @@
             <p>興味を持って貰えるか、話が長い人は全体像が示せてない。全体像を提示すると興味を持ちやすい。発散と収束によってアイデアをまとめる。</p>
             <p>画像右下あたりに表示される</p>
           </div>
-          <div class="article">
-            <img src="images/photo02.jpg" width="370" height="224" alt="">
-            <p>class="inner"の中に書く場合はこのように新聞記事のように文章に画像を埋め込むときに有効です。＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃</p>
-          </div>
         </div>
       </section>
+    </div>
 
-      <section id="sec04">
-        <header>
-          <h2><span>サンプル(こんなのもできるよ)</span></h2>
-        </header>
-        <div class="inner">
-          <ul class="col4">
-            <li>
-              <p class="img"><img src="images/photo02.jpg" width="168" height="168" alt=""></p>
-              <p>画像の真下に表示される文章です</p>
-            </li>
-            <li>
-              <p class="img"><img src="images/photo03.jpg" width="168" height="168" alt=""></p>
-              <p>たくさんは書けません</p>
-            </li>
-            <li>
-              <p class="img"><img src="images/logo01.png" width="168" height="168" alt=""></p>
-              <p>リストは必要に応じて加えたり減らしたりしてください。</p>
-            </li>
-          </ul>
-        </div>
-      </section>
 
+    <div class="end">
+      <a href="tutorial.html">チュートリアル1</a>
+      <ul>
+        <li><a href="tutorial.html">チュートリアル1</a></li>
+        <li><a href="design.html">デザイン</a></li>
+      </ul>
     </div>
   </div>
 
