--- a/layout2.html
+++ b/layout2.html
@@ -370,6 +370,13 @@ article {
 
       </section>
     </div>
+
+    <div class="end">
+      <ul>
+        <li><a href="layout3.html">レイアウト3</a></li>
+      </ul>
+    </div>
+    
   </div>
 
 </body>
