--- a/seo.html
+++ b/seo.html
@@ -28,8 +28,7 @@
 							<li><a href="#sec02">構造化データ</a></li>
 							<li><a href="#sec03">リッチスニペット</a></li>
 							<li><a href="#sec04">コンテンツの属性</a></li>
-							<li><a href="#sec05">ナレッジグラフ</a></li>
-							<li><a href="#sec06">サンプル</a></li>
+							<li><a href="#sec05">その他の指標</a></li>
 						</ul>
 						<ul id="sns">
 							<li><a href="https://twitter.com/m_seminar" target="_blank"><img src="images/iconTw.png" width="20" height="20" alt="twitter"></a></li>
@@ -47,11 +46,18 @@
 					<h2><span>SEO</span></h2>
 				</header>
 				<div class="innerS">
-					<p>SEOとはsearch engine optimizerの略であり、その意味は簡単に言うとwebサイトをコンピュータにも理解できるようにするということです。一見これはなぜ必要なのか分からない人も多いと思います。しかし本章を見た後、きっとその考え方も変わるはずです。結論を言うと私たちの作ったコンテンツが正しく世界中の人々に感動を与えるために、webページは、一度クローラーと検索エンジンというプログラムを介してから検索結果に現れるということです。もしこれらのプログラムを介さなければ、せっかく作ったwebサイトは検索結果に現れず、ネットを彷徨う悲しき遺物となることでしょう。本性はそうならないための対策をメインに取り扱います。</p>
-					<h3>クローラーと検索エンジンについて</h3>
-					<p>SEOについて知るにあたって、私たちの目標を明確にするとクローラーと検索エンジンに対してわかりやすいプログラムを書くことです。そのためにこれらのプログラムについて深く知る必要があります。クローラーの役割は、世界中にあるwebページを巡回し新しい情報はないか確認し各ページのurlと全ての単語をまとめたデータをGoogleのデータセンターに登録することです。検索エンジンの役割は、そのデータベースから検索ワードに合わせた適切なwebページをランキング付けして検索結果に羅列することです。このランキングシステムのおかげで私たちは、玉石混交の情報の海から適切なコンテンツを見つけることができる訳です。では適切なコンテンツとは、どのようなものなのでしょう。</p>
+					<p>SEOとはsearch engine optimizerの略であり、その意味は簡単に言うとwebサイトをコンピュータにも理解できるようにするということです。一見これはなぜ必要なのか分からない人も多いと思います。しかし本章を見た後、きっとその考え方も変わるはずです。私たちの作ったコンテンツは正しく世界中の人々に感動を与えるために、webページは、一度クローラーと検索エンジンというプログラムを介してから検索結果に現れます。もしこれらのプログラムを介さなければ、せっかく作ったwebサイトは検索結果に現れず、ネットを彷徨う悲しき遺物となることでしょう。本性はそうならないための対策をメインに取り扱います。</p>
+				</div>
+				<div class="inner">
+					<div class="article">
+						<h3>クローラーと検索エンジンについて</h3>
+						<img src="images/engine.jpg" width="370" height="224" alt="検索エンジンの仕組み">
+						<p>SEOについて知るにあたって、私たちの目標を明確にするとクローラーと検索エンジンに対してわかりやすいプログラムを書くことです。そのためにこれらのプログラムについて深く知る必要があります。クローラーの役割は、世界中にあるwebページを巡回し新しい情報はないか確認し各ページのurlと全ての単語をまとめたデータをGoogleのデータセンターに登録することです。この時クローラーはページ上のリンクを辿って他のページの情報を集めるためSEO対策としてリンクについて考えることはとても大事です。リンクについての詳細はこの後すぐに説明します。検索エンジンの役割は、そのデータベースから検索ワードに合わせた適切なwebページをランキング付けして検索結果に羅列することです。このランキングシステムのおかげで私たちは、玉石混交の情報の海から適切なコンテンツを見つけることができる訳です。では適切なコンテンツとは、どのようなものなのでしょう。</p>
+					</div>
+				</div>
+				<div class="innerS">
 					<h3>価値ある情報共有</h3>
-					<p>インターネットの役割として価値ある情報共有が挙げられます。これはインターネットが元々は科学者たちの論文を共有する仕組みだったことを考えると、インターネットは元来論文などの価値のある情報をより多くの人に見てもらうためのものであるので、適切なコンテンツとは、価値を持たなければならないことがわかります。しかし価値観の変化した現在では、価値のある情報とは論文のような学術的な内容だけではなく他の要因による価値を生み出すこともあります。そこで以下では、webコンテンツの価値を決定する要因とその対策について説明します。</p>
+					<p>検索エンジンが適切なコンテンツと評価する時に、コンテンツの価値が重要になります。ここでインターネットの役割を考えてみると「価値ある情報の共有」が考えられます。これはインターネットが元々は科学者たちの論文を共有する仕組みだったことを考えると、インターネットは元来論文などの価値のある情報をより多くの人に見てもらうためのものであるので、適切なコンテンツとは、価値を持たなければならないことがわかります。しかし価値観の変化した現在では、価値のある情報とは論文のような学術的な内容だけではなく他の要因による価値を生み出すこともあります。そこで以下では、webコンテンツの価値を決定する要因とその対策について説明します。</p>
 				</div>
 			</section>
 
@@ -61,6 +67,7 @@
 					<h2><span>リンク</span></h2>
 				</header>
 				<div class="innerS">
+					<p>リンクは検索エンジンが最も重要視するポイントです。例えば論文では、引用される論文ほど内容の信頼性が高いと評価されるため、論文の価値は引用数で測ることができます。同様にwebサイトの場合もそのサイトへのリンクが多ければ多いほどそのサイトの価値は高いと判断されます。</p>
 					<h3>リンクテキストの効果</h3>
 					<p>
 						リンクテキストとは、リンク内に表示されるテキストです。このテキストはユーザーや Google に対して、リンク先のページについての情報を伝えます。
@@ -132,12 +139,12 @@
 					囲み、互いを：（コロン）でつなぎます。Keyはプロパティ（属性、例えばname）を表し、Valueは値（例えば「田中太郎」など）を
 					表します。このようにして、コンピュータは「田中太郎」がname（名前）であることを理解します。
 				</p>
-					<p>
-						次に、代表的なKeyをいくつか説明します。@contentという部分は、そのメタデータを解読するときにコンピュータ側が参照する
-						辞書のようなもので、基本的にはshema.orgを用います。nameは名前であることを示すものです。<br>
-						詳しくは以下のドキュメントを参照してください。ここを変えたいのにpushできない<br>
-						<a href="https://www.w3.org/TR/json-ld11/">https://www.w3.org/TR/json-ld11/</a>
-					</p>
+				<p>
+					次に、代表的なKeyをいくつか説明します。@contentという部分は、そのメタデータを解読するときにコンピュータ側が参照する
+					辞書のようなもので、基本的にはshema.orgを用います。nameは名前であることを示すものです。<br>
+					詳しくは以下のドキュメントを参照してください。ここを変えたいのにpushできない<br>
+					<a href="https://www.w3.org/TR/json-ld11/">https://www.w3.org/TR/json-ld11/</a>
+				</p>
 				</div>
 
 			</section>
@@ -169,7 +176,7 @@
 					<h3>専門性と権威性</h3>
 					<p>専門性と権威性がサイトの質を向上させます。サイト内のコンテンツは、そのトピックの専門家が作成または編集するようにしましょう。たとえば、専門知識や豊富な経験を持つ情報発信者が書いた記事であれば、ユーザーは記事の専門性を理解できます。科学的なトピックに関するページでは、できれば十分に確立された総意を示すことが有効です。</p>
 					<p>検索エンジンは、コンテンツの専門性が高いことを評価します。検索アルゴリズムでそれを客観的に評価するには、リンクで用いられた数を数えるのが一番メジャーなやり方ですが、サイトのコンテンツ自体が正しいことを述べているのか、情報のソースは信頼性があるのか、などもユーザーの満足度に寄与するため検索のランキングに間接的に影響します。</p>
-					<h3>新鮮さ</h3>
+					<h3>情報の新鮮さ</h3>
 					<p>検索エンジンは、検索キーワードに対して適切なコンテンツを含むサイトを表示するために、検索キーワードによっては、適切なコンテンツを決定する基準が変わります。たとえば、最新のニュース トピックに関するキーワードに回答する場合は、言葉の定義に関するキーワードに回答する場合よりも、コンテンツの鮮度が大きな役割を果たします。</p>
 					<p>ここで私たちが気をつけるべきなのは、私たちのコンテンツがどのような検索キーワードによって表示されるのかをイメージすることです。今日のサッカーの話題をコンテンツにする場合にその情報ソースの信頼性を高めすぎることは、あまり意味がないということがわかります。なぜならサッカーの勝敗は、新鮮さが重要視されるので、一刻も早く公開することが何よりも重要なのです。</p>
 				</div>
@@ -177,13 +184,16 @@
 
 			<section id="sec05">
 				<header>
-					<h2><span>ナレッジグラフ</span></h2>
+					<h2><span>その他の指標</span></h2>
 				</header>
 				<div class="innerS">
-					<h3>サブタイトルとか(消してもいいよ)</h3>
-					<p>
-						＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃テキストはこの辺を利用してください＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃
-					</p>
+					<h3>レスポンシブデザイン</h3>
+					<p>近年ではインターネットを閲覧するデバイスはパソコンよりスマートフォンなどの端末になってきています。そのためレスポンシブデザイン(サイトのデザインがパソコンのものだけでなくスマートフォンにも対応している)のサイトがユーザーにとってもみやすいため検索エンジンはこのようなサイトを評価します。レスポンシブデザインのやり方について詳しくは<a href="responsive.html">こちら</a>。</p>
+					<h3>title要素</h3>
+					<p>クローラーはサイト内に含まれる単語を全てをそのサイトのurlと共にデータセンターに保管しますが、その中でもtitleタグの中の要素は非常に重要視します。検索エンジンはtitleタグの要素をサイト全体としてどのようなコンテンツを提供しているのかを意味していると捉えることで、ユーザーの検索キーワードとの関連で重要視します。</p>
+					<h3>コンテンツが表示されるまでの速度</h3>
+					<p>近年のWebサイトはよりユーザビリティを重要視する傾向が強くなりました。それに合わせて検索エンジンもこのようにユーザーを待たせないようなコンテンツを評価します。しかしこればかり意識してしまって淡白なWebサイトになってしまっては本末転倒ですので少し意識する程度にしましょう。</p>
+
 				</div>
 			</section>
 
