--- a/layout.html
+++ b/layout.html
@@ -202,6 +202,11 @@ div{
         </div>
       </section>
     </div>
+    <div class="end">
+      <ul>
+        <li><a href="layout2.html">レイアウト2</a></li>
+      </ul>
+    </div>
   </div>
 
 </body>
