--- a/layout3.html
+++ b/layout3.html
@@ -11,118 +11,6 @@
   <script src="js/script.js"></script>
 </head>
 
-<!--
-	gitの使い方：
-	git config --global user.name "ユーザーネーム"
-	git config --global user.email メールアドレス
-	//上の二つはしてない人だけで良いです。
-  git init
-	git clone https://github.com/Siro3150/How_To.git
-	git branch ブランチ名
-	git checkout ブランチ名
-	編集作業
-	git add .
-	git commit -m 'コメントを書く'
-	git push -u origin ブランチ名
-  not upstream が出た時
-  git pull origin
-  git push -u origin ブランチ名
-
-
-	２回め以降の編集作業
-	git pull https://github.com/Siro3150/How_To.git
-		編集作業
-	git add .
-	git commit -m 'コメントを書く'
-	git push -u origin ブランチ名
-
-	テンプレートの説明：
-	(新しくページを作る時)
-	①ファイル名は小文字英語でメインコンテンツ名.htmlとすること。(seo.html) ファイル位置はとりあえずseo.htmlと同じ階層で。
-	②<meta content="">にファイル名と同じようにメインコンテンツ名を記述する。(例：seo)
-	③良い感じのを<title></title>に書く(例：SEO)
-
-	(コンテンツを追加する時)
-	④サイドバーのリストにコンテンツの名前とhrefにsection番号を新たに加える。(例：sec09)
-	⑤<div id="content"></div>内に以下のプログラムを加えてコンテンを記述。<section id="">に先ほどのリストに書いたsection番号を書く。
-
-			<section id="secXX">
-				<header>
-					<h2><span>コンテンツ名</span></h2>
-				</header>
-				<div class="innerS">
-					<p>導入や思想、そのコンテンツがどのように役に立つかなど(できれば書いて欲しい)</p>
-					<h3>サブタイトル(なくても良い)</h3>
-					<p>説明</p>
-				</div>
-			</section>
-
-	⑥画像を用いて文章を説明したい時、⑤と同様に以下のプログラムを加える。(注：画像リンクはなるべくimagaesフォルダーにまとめること)
-
-
-			<section id="secXX">
-				<header>
-					<h2><span>コンテンツ名</span></h2>
-				</header>
-					<div class="inner">
-						<div class="article">
-							<img src="画像urlを記入" width="370" height="224" alt="">
-							<p>画像の右に表示される</p>
-							<p>画像右下あたりに表示される</p>
-						</div>
-						<div class="article">
-							<img src="画像urlを記入" width="370" height="224" alt="">
-							<p>＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃</p>
-						</div>
-					</div>
-			</section>
-
-
-	⑦画像を横並びに置いてその下に文章を書く場合、⑤と同様に以下のプログラムをコピペする。
-
-
-			<section id="secXX">
-				<header>
-					<h2><span>コンテンツ名</span></h2>
-				</header>
-				<div class="inner">
-					<ul class="col4">
-						<li>
-							<p class="img"><img src="url" width="168" height="168" alt=""></p>
-							<p>画像の真下に表示される文章です</p>
-						</li>
-						<li>
-							<p class="img"><img src="url" width="168" height="168" alt=""></p>
-							<p>たくさんは書けません</p>
-						</li>
-						<li>
-							<p class="img"><img src="url" width="168" height="168" alt=""></p>
-							<p>リストは必要に応じて加えたり減らしたりしてください。</p>
-						</li>
-						<li>
-							<p class="img"><img src="url" width="168" height="168" alt=""></p>
-							<p>＃＃＃＃＃＃＃＃＃＃＃＃</p>
-						</li>
-					</ul>
-				</div>
-			</section>
-
-  ⑧ソースコードを埋め込みたい時
-
-    <pre class="prettyprint linenums">
-      <code>
-        ソースコード
-      </code>
-    </pre>
-
-もっと詳しい説明：
-・全体を大きくheader、content、footerに分かれておりcontentはさらにsectionごとに区切られている。
-・サイドナビゲーションのリンク先をsectionのidに指定することでページ内遷移をしている。
-・<div class="inner">と<div class="innerS">の違いは、innerの方が画像を含めた記事を載せるため横幅が広い。innerSの方は文章のみの説明となるので横幅が狭め
-・cssとjavascriptファイルはあまり気にしなくて良い。
-・後は自由に使いたいとこをコピペしたり、無駄なとこを消したりして使ってください。
- -->
-
 <body id="top" onload="prettyPrint()">
   <div id="wrapper">
 
@@ -139,7 +27,6 @@
               <li><a href="#sec03">シングルカラムレイアウト</a></li>
               <li><a href="#sec04">マルチカラムレイアウト</a></li>
               <li><a href="#sec05">スクロール時の動き方</a></li>
-              <li><a href="#sec06">サンプル</a></li>
             </ul>
             <ul id="sns">
 							<li><a href="https://twitter.com/m_seminar" target="_blank"><img src="images/iconTw.png" width="20" height="20" alt="twitter"></a></li>
@@ -253,7 +140,7 @@
 			</section>
 
 
-			<section id="secXX">
+			<section id="sec05">
 				<header>
 					<h2><span>スクロール時の動き</span></h2>
 				</header>
@@ -261,16 +148,13 @@
 					<p>ホームページではユーザーのアクションに合わせてレイアウトを変更することができます。
 						<br>その一例としてスクロール時に特殊な動きを加えるものを紹介します。</p>
 					<h3>ヘッダーを固定するレイアウト</h3>
-					<img src="">
-					<p>スクロールをした際もヘッダーがそのままの位置で表示されるレイアウトです。
+					<p>
+						スクロールをした際もヘッダーがそのままの位置で表示されるレイアウトです。
 						これによって、企業のロゴを常に表示したり、ヘッダーのナビゲーションから、他のページを移動したりするようなページにできます。
 					</p>
 					<h3>サイドバーを固定するレイアウト</h3>
 				</div>
 			</section>
-
-
-
 
 
 
