--- a/tutorial2.html
+++ b/tutorial2.html
@@ -148,6 +148,11 @@
       </section>
 
     </div>
+      <div class="end">
+        <ul>
+          <li><a href="index.html">トップページ</a></li>
+        </ul>
+      </div>
   </div>
 
 </body>
