--- a/seo.html
+++ b/seo.html
@@ -98,8 +98,7 @@
 	&lt;body&gt;
 
 	&lt;/body&gt;
-&lt;/html&gt;
-					</pre>
+&lt;/html&gt;</pre>
 					<p>このように、ページの&lt;head&gt;タグ内に&lt;meta name=&quot;robots&quot; content=&quot;nofollow&quot;&gt;を追加</p>
 				</div>
 			</section>
@@ -179,6 +178,7 @@
 					<h3>情報の新鮮さ</h3>
 					<p>検索エンジンは、検索キーワードに対して適切なコンテンツを含むサイトを表示するために、検索キーワードによっては、適切なコンテンツを決定する基準が変わります。たとえば、最新のニュース トピックに関するキーワードに回答する場合は、言葉の定義に関するキーワードに回答する場合よりも、コンテンツの鮮度が大きな役割を果たします。</p>
 					<p>ここで私たちが気をつけるべきなのは、私たちのコンテンツがどのような検索キーワードによって表示されるのかをイメージすることです。今日のサッカーの話題をコンテンツにする場合にその情報ソースの信頼性を高めすぎることは、あまり意味がないということがわかります。なぜならサッカーの勝敗は、新鮮さが重要視されるので、一刻も早く公開することが何よりも重要なのです。</p>
+					<p>このような様々な指標による情報のランキング付は検索品質評価者が実際に<a href="https://static.googleusercontent.com/media/guidelines.raterhub.com/en//searchqualityevaluatorguidelines.pdf">検索品質評価ガイドライン</a>に沿ってチェックしています。内容は英語で少し読みづらいですが興味のある方は読んでみてください。</p>
 				</div>
 			</section>
 
