--- a/tutorial2.html
+++ b/tutorial2.html
@@ -17,15 +17,14 @@
 
     <div id="sidebar">
       <div id="sidebarWrap">
-
         <nav id="mainnav">
           <p id="menuWrap"><a id="menu"><span id="menuBtn"></span></a></p>
           <div class="panel">
             <ul>
               <li><a href="#top">top</a></li>
-              <li><a href="#sec01">基本的なタグ説明</a></li>
-              <li><a href="#sec02">構造化データ</a></li>
-              <li><a href="#sec03">リッチスニペット</a></li>
+              <li><a href="#sec01">Webサイトについて</a></li>
+              <li><a href="#sec02">Webサイトの開設に必要なもの</a></li>
+              <li><a href="#sec03">Webページの仕組み</a></li>
             </ul>
             <ul id="sns">
               <li><a href="https://twitter.com/m_seminar" target="_blank"><img src="images/iconTw.png" width="20" height="20" alt="twitter"></a></li>
@@ -36,123 +35,105 @@
       </div>
     </div>
 
-
-
     <div id="content">
 
-      <section id="sec01">
+      <section>
         <header>
-          <h2><span>基本的なタグ説明</span></h2>
+          <h2><span>Webサイトとは</span></h2>
         </header>
-
         <div class="innerS">
-            <img src="images/z2.png">
-            <p>htmlはWebページを作るための言語の一つですが、マークアップ言語であるhtmlは、その名の通りマーク＝『タグ』をつけることで、文章の構造を表現します。ebページを右クリックして「ソースの表示」を選ぶと「<」と「>」で囲まれた部分が『タグ』です。タグの記述方法にはルールがありますが、いくつか覚えれば簡単にWebページが作成できます。</p>
-
-            <h3>10個の覚えておきたいタグ</h3>
-
-            <h4>1.h1〜h6タグ</h4>
-            <p>見出しを作るときに使用するタグです。h1が一番大きな文字であり、サイトのメインとなる見出しに使われます。h2,h3…h6と数字が大きくなるにつれて小さな文字の見出しとなります。</p>
-            <pre class="prettyprint linenums">
-&lt;h1&gt;メインタイトルなど&lt;/h1&gt;
-  &lt;h2&gt;サブタイトルなど&lt;/h2&gt;
-    &lt;h3&gt;さらに小さいタイトル&lt;/h3&gt;
-      &lt;h4&gt;見出し（h4）&lt;h4&gt;
-        &lt;h5&gt;見出し（h5）&lt;h5&gt;
-          &lt;h6&gt;見出し（h6）&lt;h6&gt;</pre>
-
-          <br>
-            <h4>2.aタグ</h4>
-            <p>他のページへのリンクを貼ったりする際に使用します。</p>
-            <pre class="prettyprint linenums">
-&lt;a href=&quot;遷移先のurlなど&quot;&gt;ここの文字をクリックすると遷移します。&lt;/a&gt;</pre>
-
-            <br>
-            <h4>3.pタグ</h4>
-            <p>段落を表すためのタグです。タグでタグで囲むと、その文章が一つの段落となって、段落ごとに文章が区切られるための改行を伴います。段落の途中で改行させたい場合はbrタグを使用しましょう。pタグはブッロック要素です。</p>
-            <pre class="prettyprint linenums">
-&lt;p&gt;
-  ここには文章を書きます。&lt;br&gt;
-  brタグで文章は改行されます。
-&lt;/p&gt;</pre>
-
-            <br>
-            <h4>4.imgタグ</h4>
-            <p>画像を貼り付ける際に使用するタグです。imgタグはインライン要素です。</p>
-            <pre class="prettyprint linenums">
-&lt;img src=&quot;画像url&quot; alt=&quot;画像が表示されない時の言葉&quot; width=&quot;横幅&quot; height=&quot;高さ&quot;&gt;</pre>
-
-            <br>
-            <h4>5.tableタグ</h4>
-            <p>テーブル（表）を作成するときに使用するタグです。</p>
-            <h6>&lt;table&gt;</h6><br>
-            <p>表の開始を示すタグです。中には&lt;tr&gt;・&lt;td&gt;・&lt;th&gt;が入ります。何も入力していない場合では枠線は表示されず、border属性に"1"を指定することで表示されるようになります。</p>
-            <h6>&lt;tr&gt;</h6>
-            <p>table roeの略。テーブルの行に使用します。このタグを使用した分だけ行が追加されます。</p>
-            <h6>&lt;td&gt;</h6>
-            <p>table dateの略でテーブルのセルに使用します。サンプルの中の内容の部分と言えます。</p>
-            <h6>&lt;th&gt;</h6>
-            <p>table headerの略。テーブルの見出しのセルに使用します。</p>
-            <h4>記述例</h4>
-              <pre class="prettyprint linenums">
-&lt;table border="1"&gt;
-    &lt;tr&gt;
-        &lt;th&gt;見出しその１&lt;/th&gt;
-        &lt;th&gt;見出しその２&lt;/th&gt;
-        &lt;th&gt;見出しその３&lt;/th&gt;
-    &lt;/tr&gt;
-    &lt;tr&gt;
-        &lt;td&gt;内容&lt;/td&gt;
-        &lt;td&gt;内容&lt;/td&gt;
-        &lt;td&gt;内容&lt;/td&gt;
-    &lt;/tr&gt;
-    &lt;tr&gt;
-        &lt;td&gt;内容&lt;/td&gt;
-        &lt;td&gt;内容&lt;/td&gt;
-        &lt;td&gt;内容&lt;/td&gt;
-    &lt;/tr&gt;
-&lt;/table&gt;</pre>
-              <br>
-              <h4>6.brタグ（改行）</h4>
-              <p>文章の途中で改行したいときに使用します。段落内で強制的に改行させる際に使うのですが、連続で使用して空白行を作成するために使わないようにしましょう。</p>
-
-              <br>
-              <h4>7.ul.ol.liタグ</h4>
-              <p>リストを作成するときに使うタグです。</p>
-              <h6>&lt;ul&gt;</h6>
-              <p>unordered listの略。順番のないリストを作る際に使います。（はじめに付く記号の種類はtype属性で指定することができます。）</p>
-                <pre class="prettyprint linenums">
-&lt;ul type="A"&gt;
-    &lt;li&gt;項目&lt;/li&gt;
-    &lt;li&gt;項目&lt;/li&gt;
-    &lt;li&gt;項目&lt;/li&gt;
-&lt;/ul&gt;</pre>
-              <h6>&lt;ol&gt;</h6>
-              <p>ordered listの略。1,2,3〜やa,b,cなど順番のあるリストを作成する際に使います。はじめに付く記号や数字の種類はtype属性で指定することができます。</p>
-
-              <pre class="prettyprint linenums">
-&lt;ol type="square"&gt;
-    &lt;li&gt;項目&lt;/li&gt;
-    &lt;li&gt;項目&lt;/li&gt;
-    &lt;li&gt;項目&lt;/li&gt;
-&lt;/ol&gt;</pre>
-              <h6>&lt;li&gt;</h6>
-              <p>list itemの略。&lt;ol&gt;〇〇&lt;/ol&gt;や&lt;ul&gt;〇〇&lt;/ul&gt;の中にあたる〇〇の部分に記述します。リストの各項目を作成するときに使います。</p>
-              <br>
-              <h4>8.scriptタグ</h4>
-              <p>文書にJavaScriptなどの「スクリプト」と呼ばれるものを文書内に埋め込んだりするために使うタグです。</p>
-              <p>この記述がheadタグやbodyタグの中にある場合、JavaScriptを呼び出して何かをしようとしていると認識しましょう。</p>
-              <pre class="prettyprint linenums">
-&lt;script src="script.js"&gt;  &lt;/script&gt;</pre>
+          <p>前のチュートリアルのページでは、とりあえずローカルの環境内でブラウザにhtmlファイルを表示させ、Webプログラミングの第一歩を踏み出しました。しかしまだなぜそのように出来たか分からないと思います。そこでこのページではその疑問を解消すべくWebサイトとはどのようなものなのか明らかにしていきたいと思います。</p>
         </div>
       </section>
 
+      <section id="01">
+        <header>
+          <h2><span>Webサイトについて</span></h2>
+        </header>
+        <div class="innerS">
+          <p>Webサイトとは、複数のWebページをひとつの複合体として構成したものです。一般的に日本では、ホームページと呼ばれているものがWebサイトにあたるが、英語圏では「homepage」と「website」が明確に区別されており、「homepage」はあくまでも最初に表示されるページのことを指し、サイト全体を指すのは「website」とされています。</p>
+          <img src="images/website.png" alt="Webサイト">
+        </div>
+
+      </section>
+
+      <section id="sec02">
+        <header>
+          <h2><span>Webサイトの開設に必要なもの</span></h2>
+        </header>
+
+        <div class="innerS">
+          <ul style="padding: 10px; margin-bottom: 10px; border: 5px double #333333; list-style: none;">
+            <li><b>ドメイン</b> : インターネット上の住所</li>
+            <li><b>サーバー</b> : インターネット上の家</li>
+            <li><b>Webサイト(中身)</b> : 建物・部屋の中にあるコンテンツ・サービス（文章や画像などで構成されるファイル類）</li>
+          </ul>
+          <p>Webサイトを作成するにあたって、必ず用意しなければならないのがドメインとサーバーになります。</p>
+        </div>
+
+        <div class="innerS">
+            <h2>ドメイン</h2>
+            <p>ドメインとは、<b>インターネットにおける「住所」のようなもの</b>で、主な役割は、WebサイトのURLとオリジナルのメールアドレスの2つになります。</p>
+
+            <h4>【ドメインの前半部分】</h4>
+            <img src="images/domein.jpeg" width="800px" alt="">
+            <h1>URLの場合</h1>
+            <p>Webサイトを公開する際に、URL（住所）が必要となり、この住所を設定するために、ドメインが必要となります。</p>
+            <h1>メールアドレスの場合</h1>
+            <p>@マーク前は、自由な文字列を設定することができ、1つのドメインで複数のメールアドレスを設定することが可能となっています。</p>
+            <img src="images/domein2.jpeg" alt="">
+            <p>ドメインの前半部分は好きな文字列を付けることができます。また、最近では「日本語ドメイン」と呼ばれる、全角ひらがな・カタカナ・漢字などを使用することも可能となっています。</p><br>
+
+            <h4>【ドメインの後半部分】</h4>
+            <p>任意の文字列を自由に決めることができる前半部分とは違い、ドメインの後半部分は「.com」や「.jp」などのように決まった文字列の種類から選びます。<br></p>
+            <h1>ドメインの種類</h1>
+            <p>ドメインの種類は、住んでいる国や地域に関係なく取得できるドメインと国や地域ごとに割り当てられ、基本的にその国や地域に在住する個人のみが取得できるドメインの2種類があります。</p>
+            <h1>分野別トップレベルドメイン（gTLD)</h1>
+            <p>分野別トップレベルドメイン（gTLD）は住んでいる場所（国・地域）に関係なく取得できるドメインです。種類によって、サービスや団体などを表しますが、必ずしもその種類を選択しなければならないという決まりはありません。</p>
+            <img src="images/document.png" width="680px" alt="ドキュメント">
+            <h1>国コードトップレベルドメイン（ccTLD）</h1>
+            <p>国コードトップレベルドメインは、国や地域ごとに割り当てられており、原則的にその国・地域に存在する個人（組織）でないと取得する事が出来ません。アメリカであれば「.us」日本であれば「.jp」が該当します。</p>
+            <p style="color: blue;"><b>【汎用JPドメイン名】</b></p>
+            <p>この「.jp」」ドメインのことを汎用JPドメイン名と呼び、日本国内に住所を持つ個人・組織であれば、誰でも、いくつでも登録することが可能です。</p>
+            <p style="color: blue;"><b>【属性型JPドメイン名】</b></p>
+            <p>「.jp」ドメインの中には、「.jp」の前に決められた文字列がいる属性型JPドメインと呼ばれるものがあります。( 例:「.co.jp」、「.ne.jp」など)</p><br>
+            <p>属性型JPドメイン名は、文字列により取得できる組織が限定されているのが特徴です。また、ネットワークサービス用のドメインである「.ne.jp」を除き、1組織に1つしか取得する事が出来ません。</p>
+            <img src="images/document2.png" width="680px" alt="ドキュメント2">
+
+
+
+            <h2>サーバー</h2>
+            <p>ドメインが住所のようなものに対して、<b>サーバーはWebサイトを保管しておく家のようなもの</b>になります。そして、取得したドメイン（住所）をサーバー（家）に紐づけることによって、その URL（ドメイン）にアクセスしたユーザーはサーバーにある、Webサイトを見ることができます。</p>
+            <h4>サーバーの種類</h4>
+            <p>サーバーには、<b>共用サーバー</b>と<b>専用サーバー</b>の2種類があります。<br></p>
+            <img src="images/server.png" alt="サーバー">
+            <p>共有サーバーは、マンションの一室を利用するイメージとなっています。複数のユーザーでサーバーを利用するため、同じサーバー内の別のサイトにアクセスが集中すると、他のサイトの表示が重くなってしまう可能性があるため、共有サーバーにはある程度の制限が設けられています。さらに、スペックや機能なども、自由にカスタマイズすることが出来ず、サーバー会社やサーバー会社のプランの中から必要な上演にあったものを選択する必要があります。
+            </p>
+            <p>一方で専用サーバーは、1つのサーバーを1人のユーザーで独占して利用することが可能となっています。また、1つのサーバーを1人で使えるため、他サイトに影響を受けることなく、自由にカスタマイズすることが可能となっているが、その分費用面も共有サーバーに比べて高くなっています。</p><br>
+            <p>共有サーバーには制限があるが、様々なサーバープランがあるので、必要に応じて共用サーバーと専用サーバーを使い分けることが大切です。たとえば、一般的な小規模から中規模のサイトであれば、共用サーバーを利用し、大規模なサイトや大きくアクセスを見込んだWebサービスを展開する場合は専用サーバーを検討する必要があります。</p>
+        </div>
+      </section>
+
+      <section id="sec03">
+        <header>
+          <h2><span>Webページの仕組み</span></h2>
+        </header>
+
+        <div class="innerS">
+          <P> Webページは「HTML」「CSS」「JavaScript」といった3つのコンピュータ言語で構築されています。この3つの言語は、それぞれ役割が全く異なります。Webサイトの制作を始める前に、まずはどの言語がどんな役割を果たすか見ていきましょう。</p>
+          <h3>HTML</h3>
+          <p>HTMLとは「<b>H</b>yper <b>T</b>ext <b>M</b>arkup<b> L</b>anguage」の略称で、マークアップランゲージ、つまり、マークアップ言語とは、文章を構造化するための言語のことを言います。HTMLはタグで構成されており、指定したい箇所をタグで囲むことによって文字に様々な表現を加えられます。たとえば、HTMLで見出しを設定したり、写真や動画なども入れたりできます。他にもさまざまなデザインやアレンジを加えられるため、作りたいWebサイトのイメージに合わせてHTMLタグを組み合わせてください。また、HTMLには「.html」という専用の拡張子があり、パソコンで「.html」と表示されない場合、拡張子の設定をする必要があるため注意してください。</p>
+
+          <h3>CSS</h3>
+          <p>CSSとは「<b>C</b>ascading <b>S</b>tyle <b>S</b>heets」の略称で、文章のスタイルを指定する技術をスタイルシートと言い、HTMLなどで作成されたWebページにスタイルを適用する場合に、CSSを使います。HTMLだけでは、見た目が白黒で単調なデザインになってしまいますが、CSSを使用することによって文字や背景の色を変更し、よりデザイン性の高いホームページ作成ができます。 CSSにはHTMLとは異なるルールがあるため、記述をおこなう際は注意してください。</p>
+
+          <h3>JavaScript</h3>
+          <p>JavaScriptとは、HTMLファイルに埋め込み可能なスクリプト言語で、Webサーバーと通信しなくても、ユーザ操作などによって文字の背景を変えたり、Webページを切り替えたりできます。</p>
+        </div>
+      </section>
+
+
     </div>
-      <div class="end">
-        <ul>
-          <li><a href="index.html">トップページ</a></li>
-        </ul>
-      </div>
   </div>
 
 </body>
