--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <div class="innerS">
           <h3>サブタイトルとか(なくても良い)</h3>
           <p>
-            このサイトの目的は、これを見終わったみなさんがユニークで新しいwebサービスを提供し、インターネット上にたくさんの面白いコンテンツが溢れるようになることです。そのようなコンテンツは何もないところからは現れず、それを作るためには前提知識を必要とすることが多くあります。
+            このサイトの目的は、これを見終わったみなさんがユニークで新しいwebサービスを提供し、インターネット上にたくさんの面白いコンテンツが溢れるようになることです。しかし、そのようなコンテンツは一夕一朝には作れずましてや何もないところからは現れません。それを作るためには前提知識を必要とすることが多くあります。その為このサイトでは突飛なアイデアにとらわれずこれまでのWebを形成してきた先人たちの知識を組み合わせたアイデアを前提知識として紹介することでそれに基づいたユニークなWebサイトを作れるようにお手伝いします。
             このサイトは、特定の目的を持ったwebサイトをみなさんが作れることは目的にしていません。しかし
           </p>
           <p>前提知識を得た後のクリエイティブな作業は、あなた次第です。</p>
@@ -92,6 +92,17 @@
           </div>
         </div>
       </section>
+
+
+      <section id="sec03">
+        <header>
+          <h2><span>オリジナルさ</span></h2>
+        </header>
+        <div class="innerS">
+          <p>時々真新しいデザインのWebサイトを見かける事があります。そんな時どうやったらあんな風にオリジナルなデザインにできるのだろうと思うことがあります。絵画の世界でも同様のことが言えます</p>
+        </div>
+      </section>
+
     </div>
 
 
@@ -102,6 +113,7 @@
         <li><a href="design.html">デザイン</a></li>
       </ul>
     </div>
+    
   </div>
 
 </body>
